feat: update trusted by section, statistics, and selected works content.

--- a/index.html
+++ b/index.html
@@ -112,14 +112,13 @@
         <!-- Trusted By Section -->
         <section class="py-20 border-b border-white/5">
             <div class="max-w-7xl mx-auto px-6 text-center">
-                <p class="text-sm font-medium text-secondary mb-8 uppercase tracking-widest">Trusted by industry leaders</p>
+                <p class="text-sm font-medium text-secondary mb-8 uppercase tracking-widest">Trusted by</p>
                 <div class="flex flex-wrap justify-center items-center gap-12 md:gap-20 opacity-50 grayscale hover:grayscale-0 transition-all duration-500">
                     <!-- Placeholder Logos -->
-                    <div class="text-2xl font-bold text-white">ACME Corp</div>
-                    <div class="text-2xl font-bold text-white">GlobalTech</div>
-                    <div class="text-2xl font-bold text-white">Nebula</div>
-                    <div class="text-2xl font-bold text-white">Vertex</div>
-                    <div class="text-2xl font-bold text-white">Horizon</div>
+                    <div class="text-2xl font-bold text-white">WMSU</div>
+                    <div class="text-2xl font-bold text-white">Research Ethics Office</div>
+                    <div class="text-2xl font-bold text-white">Google</div>
+                    <div class="text-2xl font-bold text-white">Wadhwani Entrepreneurship</div>
                 </div>
             </div>
         </section>
@@ -135,15 +134,15 @@
                     
                     <div class="grid grid-cols-2 gap-8">
                         <div>
-                            <h3 class="text-4xl font-bold text-white mb-2">50+</h3>
+                            <h3 class="text-4xl font-bold text-white mb-2">0</h3>
                             <p class="text-sm text-secondary">Projects Completed</p>
                         </div>
                         <div>
-                            <h3 class="text-4xl font-bold text-white mb-2">98%</h3>
+                            <h3 class="text-4xl font-bold text-white mb-2">99%</h3>
                             <p class="text-sm text-secondary">Client Satisfaction</p>
                         </div>
                         <div>
-                            <h3 class="text-4xl font-bold text-white mb-2">10+</h3>
+                            <h3 class="text-4xl font-bold text-white mb-2">3+</h3>
                             <p class="text-sm text-secondary">Years Experience</p>
                         </div>
                         <div>
@@ -202,30 +201,24 @@
                         <h2 class="text-3xl md:text-5xl font-bold mb-4">Selected <span class="text-gradient">Works</span></h2>
                         <p class="text-secondary max-w-md">A showcase of our most recent digital products and experiences.</p>
                     </div>
-                    <a href="#" class="group flex items-center gap-2 text-sm font-semibold hover:text-accent transition-colors">
-                        View All Projects
-                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-4 h-4 group-hover:translate-x-1 transition-transform">
-                            <path stroke-linecap="round" stroke-linejoin="round" d="M13.5 4.5L21 12m0 0l-7.5 7.5M21 12H3" />
-                        </svg>
-                    </a>
                 </div>
 
                 <div class="grid md:grid-cols-2 gap-8">
-                    <!-- Project Card 1 -->
+                    <!-- Project Card 1: REO -->
                     <div class="group relative overflow-hidden rounded-2xl bg-surface border border-white/5 hover:border-accent/50 transition-all duration-500">
                         <div class="aspect-video bg-zinc-800 overflow-hidden">
                             <!-- Placeholder Image -->
                             <div class="w-full h-full bg-gradient-to-br from-zinc-800 to-zinc-900 group-hover:scale-105 transition-transform duration-700 flex items-center justify-center text-zinc-700 font-bold text-4xl">
-                                PROJECT 01
+                                REO
                             </div>
                         </div>
                         <div class="p-8">
                             <div class="flex gap-2 mb-4">
-                                <span class="px-3 py-1 text-xs font-medium bg-white/5 rounded-full text-secondary">Fintech</span>
+                                <span class="px-3 py-1 text-xs font-medium bg-white/5 rounded-full text-secondary">Management System</span>
                                 <span class="px-3 py-1 text-xs font-medium bg-white/5 rounded-full text-secondary">Web App</span>
                             </div>
-                            <h3 class="text-2xl font-bold mb-2 group-hover:text-accent transition-colors">FinanceFlow</h3>
-                            <p class="text-secondary text-sm mb-6">A comprehensive financial dashboard for modern banking needs, featuring real-time data visualization.</p>
+                            <h3 class="text-2xl font-bold mb-2 group-hover:text-accent transition-colors">Research Ethics Office (REO)</h3>
+                            <p class="text-secondary text-sm mb-6">A robust platform designed to streamline the management of researcher proposals and revisions. It facilitates efficient tracking, review processes, and compliance monitoring for academic and clinical research.</p>
                             <span class="inline-flex items-center gap-2 text-sm font-medium text-white group-hover:gap-3 transition-all">
                                 View Case Study
                                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-4 h-4">
@@ -235,75 +228,14 @@
                         </div>
                     </div>
 
-                    <!-- Project Card 2 -->
-                    <div class="group relative overflow-hidden rounded-2xl bg-surface border border-white/5 hover:border-accent/50 transition-all duration-500">
-                        <div class="aspect-video bg-zinc-800 overflow-hidden">
-                            <!-- Placeholder Image -->
-                            <div class="w-full h-full bg-gradient-to-br from-zinc-800 to-zinc-900 group-hover:scale-105 transition-transform duration-700 flex items-center justify-center text-zinc-700 font-bold text-4xl">
-                                PROJECT 02
-                            </div>
+                    <!-- Project Card 2: Under Construction -->
+                    <div class="group relative overflow-hidden rounded-2xl bg-surface border border-white/5 opacity-50 hover:opacity-100 transition-all duration-500">
+                        <div class="aspect-video bg-zinc-800/50 overflow-hidden flex items-center justify-center">
+                            <div class="text-zinc-600 font-bold text-xl">COMING SOON</div>
                         </div>
                         <div class="p-8">
-                            <div class="flex gap-2 mb-4">
-                                <span class="px-3 py-1 text-xs font-medium bg-white/5 rounded-full text-secondary">E-Commerce</span>
-                                <span class="px-3 py-1 text-xs font-medium bg-white/5 rounded-full text-secondary">Mobile First</span>
-                            </div>
-                            <h3 class="text-2xl font-bold mb-2 group-hover:text-accent transition-colors">LuxeMarket</h3>
-                            <p class="text-secondary text-sm mb-6">A premium e-commerce experience for luxury fashion brands, optimized for mobile conversion.</p>
-                            <span class="inline-flex items-center gap-2 text-sm font-medium text-white group-hover:gap-3 transition-all">
-                                View Case Study
-                                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-4 h-4">
-                                    <path stroke-linecap="round" stroke-linejoin="round" d="M17.25 8.25L21 12m0 0l-3.75 3.75M21 12H3" />
-                                </svg>
-                            </span>
-                        </div>
-                    </div>
-                    
-                     <!-- Project Card 3 -->
-                    <div class="group relative overflow-hidden rounded-2xl bg-surface border border-white/5 hover:border-accent/50 transition-all duration-500">
-                        <div class="aspect-video bg-zinc-800 overflow-hidden">
-                            <!-- Placeholder Image -->
-                            <div class="w-full h-full bg-gradient-to-br from-zinc-800 to-zinc-900 group-hover:scale-105 transition-transform duration-700 flex items-center justify-center text-zinc-700 font-bold text-4xl">
-                                PROJECT 03
-                            </div>
-                        </div>
-                        <div class="p-8">
-                            <div class="flex gap-2 mb-4">
-                                <span class="px-3 py-1 text-xs font-medium bg-white/5 rounded-full text-secondary">HealthTech</span>
-                                <span class="px-3 py-1 text-xs font-medium bg-white/5 rounded-full text-secondary">Platform</span>
-                            </div>
-                            <h3 class="text-2xl font-bold mb-2 group-hover:text-accent transition-colors">VitalSync</h3>
-                            <p class="text-secondary text-sm mb-6">Connecting patients with healthcare providers through a secure and intuitive telemedicine platform.</p>
-                            <span class="inline-flex items-center gap-2 text-sm font-medium text-white group-hover:gap-3 transition-all">
-                                View Case Study
-                                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-4 h-4">
-                                    <path stroke-linecap="round" stroke-linejoin="round" d="M17.25 8.25L21 12m0 0l-3.75 3.75M21 12H3" />
-                                </svg>
-                            </span>
-                        </div>
-                    </div>
-
-                     <!-- Project Card 4 -->
-                    <div class="group relative overflow-hidden rounded-2xl bg-surface border border-white/5 hover:border-accent/50 transition-all duration-500">
-                        <div class="aspect-video bg-zinc-800 overflow-hidden">
-                            <!-- Placeholder Image -->
-                            <div class="w-full h-full bg-gradient-to-br from-zinc-800 to-zinc-900 group-hover:scale-105 transition-transform duration-700 flex items-center justify-center text-zinc-700 font-bold text-4xl">
-                                PROJECT 04
-                            </div>
-                        </div>
-                        <div class="p-8">
-                            <div class="flex gap-2 mb-4">
-                                <span class="px-3 py-1 text-xs font-medium bg-white/5 rounded-full text-secondary">AI Tool</span>
-                                <span class="px-3 py-1 text-xs font-medium bg-white/5 rounded-full text-secondary">SaaS</span>
-                            </div>
-                            <h3 class="text-2xl font-bold mb-2 group-hover:text-accent transition-colors">CogniFlow</h3>
-                            <p class="text-secondary text-sm mb-6">An AI-powered workflow automation tool designed to streamline complex business processes.</p>
-                            <span class="inline-flex items-center gap-2 text-sm font-medium text-white group-hover:gap-3 transition-all">
-                                View Case Study
-                                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-4 h-4">
-                                    <path stroke-linecap="round" stroke-linejoin="round" d="M17.25 8.25L21 12m0 0l-3.75 3.75M21 12H3" />
-                                </svg>
-                            </span>
+                            <h3 class="text-xl font-bold mb-2 text-secondary">Under Construction</h3>
+                            <p class="text-secondary text-sm">More exciting projects are in the works. Stay tuned.</p>
                         </div>
                     </div>
                 </div>
@@ -321,41 +253,59 @@
                     <p class="text-secondary max-w-2xl mx-auto">Our diverse team of experts brings together creativity, technology, and strategy.</p>
                 </div>
 
-                <div class="grid grid-cols-2 md:grid-cols-4 gap-8">
-                    <!-- Member 1 -->
+                <div class="grid grid-cols-2 md:grid-cols-3 gap-8 md:gap-y-16">
+                    <!-- Member 1: Alken Valledor -->
                     <div class="text-center group">
                         <div class="w-32 h-32 mx-auto rounded-full bg-zinc-800 mb-6 overflow-hidden border-2 border-transparent group-hover:border-accent transition-colors">
                             <div class="w-full h-full bg-gradient-to-b from-zinc-700 to-zinc-800 flex items-center justify-center text-4xl">👨‍💻</div>
                         </div>
-                        <h3 class="text-lg font-bold text-white">Alex Morgan</h3>
-                        <p class="text-sm text-secondary">Founder & CEO</p>
+                        <h3 class="text-lg font-bold text-white">Alken Valledor</h3>
+                        <p class="text-sm text-secondary">Team Member</p>
                     </div>
 
-                    <!-- Member 2 -->
+                    <!-- Member 2: Janus Dominic -->
                     <div class="text-center group">
                         <div class="w-32 h-32 mx-auto rounded-full bg-zinc-800 mb-6 overflow-hidden border-2 border-transparent group-hover:border-accent transition-colors">
-                            <div class="w-full h-full bg-gradient-to-b from-zinc-700 to-zinc-800 flex items-center justify-center text-4xl">👩‍🎨</div>
+                            <div class="w-full h-full bg-gradient-to-b from-zinc-700 to-zinc-800 flex items-center justify-center text-4xl">👨‍💻</div>
                         </div>
-                        <h3 class="text-lg font-bold text-white">Sarah Chen</h3>
-                        <p class="text-sm text-secondary">Creative Director</p>
+                        <h3 class="text-lg font-bold text-white">Janus Dominic</h3>
+                        <p class="text-sm text-secondary">Team Member</p>
                     </div>
 
-                    <!-- Member 3 -->
+                    <!-- Member 3: Nixie Simbajon -->
                     <div class="text-center group">
                         <div class="w-32 h-32 mx-auto rounded-full bg-zinc-800 mb-6 overflow-hidden border-2 border-transparent group-hover:border-accent transition-colors">
-                            <div class="w-full h-full bg-gradient-to-b from-zinc-700 to-zinc-800 flex items-center justify-center text-4xl">👨‍🔧</div>
+                            <div class="w-full h-full bg-gradient-to-b from-zinc-700 to-zinc-800 flex items-center justify-center text-4xl">👩‍💻</div>
                         </div>
-                        <h3 class="text-lg font-bold text-white">David Kim</h3>
-                        <p class="text-sm text-secondary">Lead Developer</p>
+                        <h3 class="text-lg font-bold text-white">Nixie Simbajon</h3>
+                        <p class="text-sm text-secondary">Team Member</p>
                     </div>
 
-                    <!-- Member 4 -->
+                    <!-- Member 4: Paolo Lorenzo Longcob -->
                     <div class="text-center group">
                         <div class="w-32 h-32 mx-auto rounded-full bg-zinc-800 mb-6 overflow-hidden border-2 border-transparent group-hover:border-accent transition-colors">
-                            <div class="w-full h-full bg-gradient-to-b from-zinc-700 to-zinc-800 flex items-center justify-center text-4xl">👩‍💼</div>
+                            <div class="w-full h-full bg-gradient-to-b from-zinc-700 to-zinc-800 flex items-center justify-center text-4xl">👨‍💻</div>
                         </div>
-                        <h3 class="text-lg font-bold text-white">Emily Davis</h3>
-                        <p class="text-sm text-secondary">Product Manager</p>
+                        <h3 class="text-lg font-bold text-white">Paolo Lorenzo Longcob</h3>
+                        <p class="text-sm text-secondary">Team Member</p>
+                    </div>
+
+                    <!-- Member 5: Winston Tabotabo -->
+                    <div class="text-center group">
+                        <div class="w-32 h-32 mx-auto rounded-full bg-zinc-800 mb-6 overflow-hidden border-2 border-transparent group-hover:border-accent transition-colors">
+                            <div class="w-full h-full bg-gradient-to-b from-zinc-700 to-zinc-800 flex items-center justify-center text-4xl">👨‍💻</div>
+                        </div>
+                        <h3 class="text-lg font-bold text-white">Winston Tabotabo</h3>
+                        <p class="text-sm text-secondary">Team Member</p>
+                    </div>
+
+                    <!-- Member 6: Zain Turabin -->
+                    <div class="text-center group">
+                        <div class="w-32 h-32 mx-auto rounded-full bg-zinc-800 mb-6 overflow-hidden border-2 border-transparent group-hover:border-accent transition-colors">
+                            <div class="w-full h-full bg-gradient-to-b from-zinc-700 to-zinc-800 flex items-center justify-center text-4xl">👨‍💻</div>
+                        </div>
+                        <h3 class="text-lg font-bold text-white">Zain Turabin</h3>
+                        <p class="text-sm text-secondary">Team Member</p>
                     </div>
                 </div>
             </div>
