--- a/index.html
+++ b/index.html
@@ -552,12 +552,12 @@
                 <div class="border-t border-white/5 pt-8 flex flex-col md:flex-row items-center justify-between gap-4">
                     <p class="text-xs text-secondary">&copy; 2024 SayLess Inc. All rights reserved.</p>
                     <div class="flex gap-6 text-xs text-secondary">
-                        <a href="privacy.php" class="group relative hover:text-white transition-colors duration-300">
+                        <a href="privacy.html" class="group relative hover:text-white transition-colors duration-300">
                             Privacy Policy
                             <span
                                 class="absolute -bottom-1 left-0 w-0 h-px bg-accent transition-all duration-300 group-hover:w-full"></span>
                         </a>
-                        <a href="terms.php" class="group relative hover:text-white transition-colors duration-300">
+                        <a href="terms.html" class="group relative hover:text-white transition-colors duration-300">
                             Terms of Service
                             <span
                                 class="absolute -bottom-1 left-0 w-0 h-px bg-accent transition-all duration-300 group-hover:w-full"></span>
